--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -1044,6 +1044,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d97ca1ee",
+   "metadata": {},
+   "source": [
+    "The request for Rodents has a peak in September to November within morning hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93584894",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "fcbb5c16",
    "metadata": {},
    "source": [
@@ -1141,12 +1157,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8049702",
+   "cell_type": "markdown",
+   "id": "05133395",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In genernal, number of service requests in crease while employment rate grows"
+   ]
   },
   {
    "cell_type": "code",
